--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,12 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
+# ignore picture files
+*.jpg
+*.png
+*.jpeg
+*.tif
+*.txt
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
