--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ var/
 *.jpeg
 *.tif
 *.txt
+*.sql
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
